--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
-<h1>Página Root </h1>
 
-<router-outlet></router-outlet>
+<div class="content">
+  
+
+  <div class="row">
+   <app-menu></app-menu>
+
+  </div>
+      
+
+  <section class="row">
+    
+    <router-outlet></router-outlet>
+
+  </section>
+
+
+  <footer>
+    <app-footer></app-footer>
+  </footer>
+</div>
+
