--- a/src/app/components/layout/menu/menu.component.html
+++ b/src/app/components/layout/menu/menu.component.html
@@ -6,37 +6,40 @@
       <div class="collapse navbar-collapse" id="navbarColor03">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active" routerLink="inicio">Inicio
+
+            <a class="nav-link active" routerLink="/">inicio
               <span class="visually-hidden">(current)</span>
             </a>
 
+
+            
+         
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Caracteristicas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Precios</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
+          
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Información</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">¿Quienes somos?</a>
+              <a class="dropdown-item" href="#">Nuestros Servicios</a>
+              <a class="dropdown-item" href="#">Visitanos</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Separated link</a>
+              <a class="dropdown-item" href="#">Ayuda</a>
             </div>
           </li>
-          <a class="nav-link active" routerLink="/">Home
+          <a class="nav-link active" routerLink="inicio">Colección
             <span class="visually-hidden">(current)</span>
           </a>
+
         </ul>
         <form class="d-flex">
-          <input class="form-control me-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          <input class="form-control me-sm-2" type="text" placeholder="¿Qué estás buscando?">
+          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
         </form>
       </div>
     </div>
