--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,3 +1,5 @@
+
+<div class="row">
 <div>
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -20,4 +22,5 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+</div>
 </div>
