--- a/src/app/components/layout/section/section.component.html
+++ b/src/app/components/layout/section/section.component.html
@@ -9,15 +9,15 @@
       <div class="card border-secondary mb-3" style="max-width: 20rem;">
         <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
         <div class="card-body">
-          <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Título de la tarjeta secundaria</font></font></h4>
+          <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">LAMBORGHINI URUS</font></font></h4>
           <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Un texto de ejemplo rápido para construir sobre el título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</font></font></p>
         </div>
       </div>
       <div class="card border-success mb-3" style="max-width: 20rem;">
         <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
         <div class="card-body">
-          <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Título de la tarjeta de éxito</font></font></h4>
-          <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Un texto de ejemplo rápido para construir sobre el título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</font></font></p>
+          <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">LAMBORGHINI AVENTADOR</font></font></h4>
+          <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">El Aventador ha sido diseñado para ir más allá del propio concepto de rendimiento, convirtiéndose rápidamente en el punto de referencia para el sector de los superdeportivos y adelantándose ya hoy a los coches del futuro.</font></font></p>
         </div>
     
       </div>
