--- a/src/app/components/layout/section/section.component.html
+++ b/src/app/components/layout/section/section.component.html
@@ -2,15 +2,16 @@
     <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
         <div class="card-body">
-          <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Título de la tarjeta principal</font></font></h4>
-          <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Un texto de ejemplo rápido para construir sobre el título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</font></font></p>
+          <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">LAMBORGHINI HURACAN</font></font></h4>
+          <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">El Lamborghini Huracán es el acuerdo ideal entre tecnología y diseño. 
+            La primera emoción se siente con solo mirarlo. Líneas definidas y aerodinámicas diseñadas para contrarrestar el aire y domar la carretera.</font></font></p>
         </div>
       </div>
       <div class="card border-secondary mb-3" style="max-width: 20rem;">
         <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
         <div class="card-body">
           <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">LAMBORGHINI URUS</font></font></h4>
-          <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Un texto de ejemplo rápido para construir sobre el título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</font></font></p>
+          <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">El Lamborghini Urus es el primer vehículo utilitario superdeportivo en todo el mundo que fusiona el alma de un coche superdeportivo y la funcionalidad de un SUV. Impulsado por un motor V8 biturbo de 4,0 litros que genera 650 CV de potencia y un par de 850 Nm</font></font></p>
         </div>
       </div>
       <div class="card border-success mb-3" style="max-width: 20rem;">
