--- a/src/app/components/layout/section/section.component.html
+++ b/src/app/components/layout/section/section.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="cards">
     <div class="card border-primary mb-3" style="max-width: 20rem;">
         <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
         <div class="card-body">
