--- a/src/app/components/layout/section/section.component.html
+++ b/src/app/components/layout/section/section.component.html
@@ -1,6 +1,6 @@
 <div class="cards">
     <div class="card border-primary mb-3" style="max-width: 20rem;">
-        <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
+        <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Lamborghini</font></font></div>
         <div class="card-body">
           <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">LAMBORGHINI HURACAN</font></font></h4>
           <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">El Lamborghini Huracán es el acuerdo ideal entre tecnología y diseño. 
@@ -8,18 +8,19 @@
         </div>
       </div>
       <div class="card border-secondary mb-3" style="max-width: 20rem;">
-        <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
+        <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Lamborghini</font></font></div>
         <div class="card-body">
           <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">LAMBORGHINI URUS</font></font></h4>
           <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">El Lamborghini Urus es el primer vehículo utilitario superdeportivo en todo el mundo que fusiona el alma de un coche superdeportivo y la funcionalidad de un SUV. Impulsado por un motor V8 biturbo de 4,0 litros que genera 650 CV de potencia y un par de 850 Nm</font></font></p>
         </div>
       </div>
       <div class="card border-success mb-3" style="max-width: 20rem;">
-        <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Encabezamiento</font></font></div>
+        <div class="card-header"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Lamborghini</font></font></div>
         <div class="card-body">
           <h4 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">LAMBORGHINI AVENTADOR</font></font></h4>
           <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">El Aventador ha sido diseñado para ir más allá del propio concepto de rendimiento, convirtiéndose rápidamente en el punto de referencia para el sector de los superdeportivos y adelantándose ya hoy a los coches del futuro.</font></font></p>
         </div>
-    
       </div>
+
+      
 </div>
